Limit the number of APIs, limit OTP code entry, fix logic errors when retrieving Revenue Reports,integrate VietQr.